# GaRLIO_detailed

./: CMakeLists.txt  README.md  package.xml
.catkin_tools/profiles/default/: devel_collisions.txt
config/: loop3.yaml
include/: common_lib.h  pointProcess.hpp
include/tools/: timer.hpp
launch/: ntu_loop3_mapping.launch  snail_sl_mapping.launch
src/: CMakeLists.txt  imuProcess.hpp  lidarMapping.cpp  pointProcess.cpp  radar_ego_velocity_estimator.cpp
src/config/: loop2.yaml  sl.yaml
src/include/: S2.hpp  filter_state.hpp  pointProcess.hpp  radar_ego_velocity_estimator.h
src/include/rio_utils/: radar_point_cloud.h
src/include/tools/: color_print.hpp
src/launch/: ntu_loop2_mapping.launch
src/rviz_cfg/: aloam_velodyne.rviz
src/src/: lidarFactor.hpp  lidarMapping.cpp
